--- a/source/TimeLapser/Locale/Locale.zh.resx
+++ b/source/TimeLapser/Locale/Locale.zh.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -118,48 +118,48 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AllScreens" xml:space="preserve">
-    <value>All screeens</value>
+    <value>所有画面</value>
   </data>
   <data name="Bitrate" xml:space="preserve">
-    <value>Bitrate(mbps)</value>
+    <value>比特率(mbps)</value>
   </data>
   <data name="ElapsedFormatStirng" xml:space="preserve">
-    <value>Elapsed :{0:g}</value>
+    <value>已过去: {0:g}</value>
   </data>
   <data name="Format" xml:space="preserve">
-    <value>Format</value>
+    <value>格式</value>
   </data>
   <data name="Framerate" xml:space="preserve">
-    <value>Framerate</value>
+    <value>帧率</value>
   </data>
   <data name="IntervalMs" xml:space="preserve">
-    <value>Interval(ms)</value>
+    <value>间隔(ms)</value>
   </data>
   <data name="OutputPath" xml:space="preserve">
-    <value>Output path</value>
+    <value>输出路径</value>
   </data>
   <data name="Pending" xml:space="preserve">
-    <value>Pending</value>
+    <value>待定</value>
   </data>
   <data name="ProgramName" xml:space="preserve">
     <value>Timelapser by kasthack</value>
   </data>
   <data name="Realtime" xml:space="preserve">
-    <value>Realtime</value>
+    <value>实时</value>
   </data>
   <data name="Recorder" xml:space="preserve">
-    <value>Recorder</value>
+    <value>录制方式</value>
   </data>
   <data name="Screen" xml:space="preserve">
-    <value>Screen</value>
+    <value>屏幕</value>
   </data>
   <data name="SplitEveryNMinutes" xml:space="preserve">
-    <value>Split every N minutes</value>
+    <value>每N分钟分割</value>
   </data>
   <data name="StartRecording" xml:space="preserve">
-    <value>Go</value>
+    <value>开始</value>
   </data>
   <data name="StopRecording" xml:space="preserve">
-    <value>Stop</value>
+    <value>结束</value>
   </data>
 </root>
