--- a/source/TimeLapser/Locale/Locale.ru.resx
+++ b/source/TimeLapser/Locale/Locale.ru.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BehindThisWindowDragAndResizeToTune" xml:space="preserve">
+    <value>Под этим окном. Измените размер/положение для настройки</value>
+  </data>
   <data name="Bitrate" xml:space="preserve">
     <value>Битрейт(MBps)</value>
   </data>
